--- a/contour/CMakeLists.txt
+++ b/contour/CMakeLists.txt
@@ -8,7 +8,7 @@ add_definitions(-DUSE_CMAKE)
 add_library(conrec ${LIB_TYPE} ${conrec_SOURCES})
 
 if (UNIX)
-  set(CMAKE_CXX_FLAGS "-std=c++11 -std=c++14 -pedantic -Wall ${CMAKE_CXX_FLAGS}")
+  set(CMAKE_CXX_FLAGS "-fPIC -std=c++11 -std=c++14 -pedantic -Wall ${CMAKE_CXX_FLAGS}")
 endif()
 
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/config.h.in" "${CMAKE_CURRENT_BINARY_DIR}/config.h" @ONLY)
