--- a/contour/CMakeLists.txt
+++ b/contour/CMakeLists.txt
@@ -1,78 +1,130 @@
 include(GenerateExportHeader)
 
-# Definition used to allow compilation using python build utilities
-add_definitions(-DUSE_CMAKE)
+# Determine library type
+if(CONTOUR_BUILD_SHARED_LIBS)
+  set(CONTOUR_LIB_TYPE SHARED)
+else()
+  set(CONTOUR_LIB_TYPE STATIC)
+endif()
 
-add_library(conrec ${LIB_TYPE}
+# conrec library (C) - internal implementation
+add_library(conrec ${CONTOUR_LIB_TYPE}
   conrec.c
+  conrec.h
+)
+set_target_properties(conrec PROPERTIES
+  C_STANDARD 99
+  C_STANDARD_REQUIRED ON
 )
 
-if (UNIX)
-  set(CMAKE_CXX_FLAGS "-pedantic -Wall ${CMAKE_CXX_FLAGS}")
+# Generate config.h
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+  set(SPS_DEBUG 1)
 endif()
+configure_file(
+  "${CMAKE_CURRENT_SOURCE_DIR}/config.h.in"
+  "${CMAKE_CURRENT_BINARY_DIR}/config.h"
+  @ONLY
+)
 
-configure_file("${CMAKE_CURRENT_SOURCE_DIR}/config.h.in" "${CMAKE_CURRENT_BINARY_DIR}/config.h" @ONLY)
-
-if (MSVC)
-  set_source_files_properties(contour.cpp PROPERTIES COMPILE_FLAGS "/wd6011 /wd6386")
-endif()
-
-add_library(contour ${LIB_TYPE} contour.cpp)
-
-target_include_directories(contour
-  PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/.."
-  PUBLIC "${CMAKE_CURRENT_BINARY_DIR}/..")
-
-generate_export_header(contour)
-
-target_link_libraries(contour PRIVATE conrec)
-
-target_compile_features(contour PRIVATE cxx_std_14)
-
-find_package(SWIG)
-
-add_library(libs::contour ALIAS contour)
-
-include(${SWIG_USE_FILE})
-
-if (WIN32)
-  find_package(Python3 COMPONENTS Interpreter Development NumPy)
-else()
-  # On linux, we require a specific version of Python
-  find_package(Python3 3.9 COMPONENTS Interpreter Development NumPy)
-endif()
-include_directories(${Python3_INCLUDE_DIRS})
-include_directories(${Python3_NumPy_INCLUDE_DIRS})
-
-if (MSVC)
-  set(CMAKE_SWIG_FLAGS "-D_SWIG_WIN32")
-  add_definitions(-DSWIG_PYTHON_INTERPRETER_NO_DEBUG)
-  add_definitions(-DHAVE_ROUND)
-  string(REPLACE "_d" "" PYTHON_LIBRARIES "${PYTHON_LIBRARIES}")
-endif()
-
-include_directories(${PYTHON_INCLUDE_DIRS})
-
-set(swig_contour_HEADERS
+# contour library (C++)
+add_library(contour ${CONTOUR_LIB_TYPE}
+  contour.cpp
   contour.hpp
 )
 
-set_source_files_properties(swig_contour.i PROPERTIES CPLUSPLUS ON)
-set_property(SOURCE swig_contour.i PROPERTY SWIG_MODULE_NAME swig_contour) # Explicitly set name -module is passed to SWIG
-set_property(SOURCE swig_contour.i PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/..")
-swig_add_library(swig_contour LANGUAGE python SOURCES swig_contour.i ${swig_contour_HEADERS})
+target_compile_definitions(contour PRIVATE USE_CMAKE)
 
-if (MSVC)
-  # Setting RUNTIME_OUTPUT_DIRECTORY using set_target_properties does not work
-  add_custom_command(TARGET ${SWIG_MODULE_swig_contour_REAL_NAME} POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${SWIG_MODULE_swig_contour_REAL_NAME}> "${CMAKE_CURRENT_BINARY_DIR}"
-  )
+target_include_directories(contour
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/..>
+)
 
-  # 4459: declaration of swig_this hides global declaration,
-  #       e.g. static PyObject* swig_this = NULL;
-  #       void SomeFunction(PyObject* swig_this);
-  set_source_files_properties( ${swig_generated_file_fullname} PROPERTIES COMPILE_FLAGS "/wd6011 /wd6244 /wd6246 /wd4459 /wd4701 /wd4127 /wd4456 /Od")
+target_link_libraries(contour PRIVATE conrec)
+
+target_compile_features(contour PUBLIC cxx_std_14)
+set_target_properties(contour PROPERTIES
+  CXX_STANDARD_REQUIRED ON
+  CXX_EXTENSIONS OFF
+)
+
+generate_export_header(contour)
+
+# Alias for use as subproject
+add_library(contour::contour ALIAS contour)
+
+# Compiler warnings (applied to our code only, not SWIG-generated)
+if(CMAKE_C_COMPILER_ID MATCHES "GNU|Clang")
+  target_compile_options(conrec PRIVATE -Wall -Wextra -pedantic)
+endif()
+if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+  target_compile_options(contour PRIVATE -Wall -Wextra -pedantic)
 endif()
 
-#swig_link_libraries(swig_contour contour conrec ${PYTHON_LIBRARIES})
-target_link_libraries(${SWIG_MODULE_swig_contour_REAL_NAME} contour conrec ${Python3_LIBRARIES})
+# Python bindings
+if(CONTOUR_BUILD_PYTHON)
+  find_package(SWIG 4.0 COMPONENTS python)
+  find_package(Python3 COMPONENTS Interpreter Development NumPy)
+
+  if(SWIG_FOUND AND Python3_FOUND AND Python3_NumPy_FOUND)
+    message(STATUS "Building Python bindings for contour")
+    include(UseSWIG)
+
+    set_source_files_properties(swig_contour.i PROPERTIES
+      CPLUSPLUS ON
+      SWIG_MODULE_NAME swig_contour
+      INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/.."
+    )
+
+    if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.20)
+      set_property(SOURCE swig_contour.i PROPERTY USE_SWIG_DEPENDENCIES TRUE)
+    endif()
+
+    if(MSVC)
+      set_property(SOURCE swig_contour.i PROPERTY SWIG_FLAGS "-D_SWIG_WIN32")
+    endif()
+
+    swig_add_library(swig_contour
+      LANGUAGE python
+      SOURCES swig_contour.i contour.hpp
+    )
+
+    target_include_directories(swig_contour PRIVATE
+      ${Python3_INCLUDE_DIRS}
+      ${Python3_NumPy_INCLUDE_DIRS}
+    )
+
+    swig_link_libraries(swig_contour
+      contour
+      Python3::Python
+    )
+
+    # Suppress warnings in SWIG-generated code
+    if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+      target_compile_options(swig_contour PRIVATE
+        -Wno-deprecated-declarations
+        -Wno-unused-parameter
+        -Wno-missing-field-initializers
+      )
+    elseif(MSVC)
+      target_compile_definitions(swig_contour PRIVATE
+        SWIG_PYTHON_INTERPRETER_NO_DEBUG
+        HAVE_ROUND
+      )
+      target_compile_options(swig_contour PRIVATE
+        /wd6011 /wd6244 /wd6246 /wd4459 /wd4701 /wd4127 /wd4456
+      )
+    endif()
+
+    if(MSVC)
+      add_custom_command(TARGET swig_contour POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+          $<TARGET_FILE:swig_contour>
+          "${CMAKE_CURRENT_BINARY_DIR}"
+      )
+    endif()
+  else()
+    message(STATUS "Python bindings disabled: SWIG=${SWIG_FOUND}, Python3=${Python3_FOUND}, NumPy=${Python3_NumPy_FOUND}")
+  endif()
+endif()
